src/objects/blng__FinanceBook__c.object
<CustomObject>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>To deactivate the finance book, clear the checkbox. This won&apos;t affect existing transactions
        that reference the book.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__FinancePeriodDuration__c</fullName>
        <inlineHelpText>The duration of the finance period&apos;s date range.</inlineHelpText>
        <label>Finance Period Duration</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__FinancePeriodDuration</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__PeriodType__c</fullName>
        <inlineHelpText>Select whether to base the finance book on revenue transactions or accounting transactions.</inlineHelpText>
        <label>Period Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__FinanceBookPeriodType</valueSetName>
        </valueSet>
    </fields>
    <label>Finance Book</label>
    <listViews>
        <fullName>blng__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Finance Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Finance Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>